# membrane_tensegrity

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
doc/: GitHubでのPull Request (PR) Review方法.md  GitHubでのPull Request (PR)作成方法.md  Mermaidを用いたフローチャートの作成方法.md
doc/pic/: prre.mov
src/: CMakeLists.txt  build.sh  build_input_optimize.sh  build_optimization.sh  build_optimize.sh  build_rmsd.sh  cmake_build.sh  coord_ex_20231216-155618.csv  coord_ex_20231216-155855.csv  csv_io.py  data_io.cpp  data_io.hpp  data_io_test.cpp  geometry.h  moved_points.csv  optimize_structure_from_input.cpp  original_edges.csv  original_points.csv  reformat_obj.py  rmsd.h  rmsd_calculator.cpp  rmsd_io.h  rmsd_simulator.py  rmsd_struct.h  test_optimization.cpp  updated_coordinates1.csv
src/iofiles/: coord_ex_20231216-155618.csv  coord_ex_20231216-155855.csv  original_coordinates.csv  original_edges.csv  original_points.csv  updated_coordinates2.csv  updated_coordinates3.csv
